--- a/view/src/main/webapp/principal/menu.xhtml
+++ b/view/src/main/webapp/principal/menu.xhtml
@@ -48,9 +48,18 @@
 			
 			<rich:dropDownMenu mode="ajax" label="Operacões">
 				
-				<rich:menuItem label="Movimentações de Mercadoria">
+				<rich:menuItem label="Movimentações de Mercadorias">
 					<pxt:navigation target="../operacoes/movimentacoesMercadoria.xhtml" />
 				</rich:menuItem>
+				
+				<rich:menuItem label="Pedido de Mercadorias">
+					<pxt:navigation target="../operacoes/pedidoMercadoria.xhtml" />
+				</rich:menuItem>
+				
+					<rich:menuItem label="Pedido">
+					<pxt:navigation target="../operacoes/pedido.xhtml" />
+				</rich:menuItem>
+				
 				
 			</rich:dropDownMenu>
 			
@@ -65,7 +74,7 @@
 			<rich:dropDownMenu mode="ajax" label="Relatórios">
 
 				<rich:menuItem label="Relatório de Movimentações">
-					<pxt:navigation target="../consultas/movimentacao.xhtml" />
+					<pxt:navigation target="../consultas/relatorioMovimentacoes.xhtml" />
 			</rich:menuItem>
 			
 			</rich:dropDownMenu>	
