--- a/view/src/main/webapp/operacoes/movimentacoesMercadoria.xhtml
+++ b/view/src/main/webapp/operacoes/movimentacoesMercadoria.xhtml
@@ -8,7 +8,7 @@
 	<ui:composition template="/META-INF/facelets/templates/crud.xhtml">
 		<ui:param name="form_id" value="formMovimentacoesMercadoria" />
 		<ui:param name="backingBean" value="#{movimentacoesMercadoriaBean}" />
-		<ui:param name="titulo" value="Movimentações de Mercadoria" />
+		<ui:param name="titulo" value="Movimentações de Mercadorias" />
 		<ui:param name="renderedEdit" value="false" />
 		<ui:param name="renderedDelete" value="false" />
 	
@@ -19,30 +19,30 @@
 				<h:outputLabel value="Operação:" styleClass="outputText" />	
 				<h:outputLabel value="Quantidade:" styleClass="outputText" />	
 			
-			<h:inputText value="#{movimentacoesMercadoriaBean.domain.codigoMovimentacao}" style="width:85%" disabled="#{movimentacoesMercadoriaBean.disabledOnDefault}" >
+			<h:inputText value="#{movimentacoesMercadoriaBean.domain.codigo}" style="width:85%" disabled="#{movimentacoesMercadoriaBean.disabledOnDefault}" >
 			</h:inputText>														
 
-			<pxtfl:searchField value="Pesquisar" id="searchProduto" searchProperty="descricaoProduto" controller="#{movimentacoesMercadoriaBean.searchProduto}" modalTitle="Produto" disabledOn="#{movimentacoesMercadoriaBean.disabledOnDefault}" width="90%">
+			<pxtfl:searchField value="Pesquisar" id="searchProduto" searchProperty="descricao" controller="#{movimentacoesMercadoriaBean.searchProduto}" modalTitle="Produto" disabledOn="#{movimentacoesMercadoriaBean.disabledOnDefault}" width="90%">
 					<ui:define name="filtros">
 						<pxt:panelGrid columnsWidth="10%;90%">
 							<h:outputText value="Código:" styleClass="outputText" />
 							<h:inputText
-								value="#{movimentacoesMercadoriaBean.searchProduto.searchObject.codigoProduto}" maxlength="7" style="width: 15%;">
+								value="#{movimentacoesMercadoriaBean.searchProduto.searchObject.codigo}" maxlength="7" style="width: 15%;">
 								<pxt:onlyNumber />
 							</h:inputText>
 							
 							<h:outputText value="Descrição:" styleClass="outputText" />
 							<h:inputText
-								value="#{movimentacoesMercadoriaBean.searchProduto.searchObject.descricaoProduto}" maxlength="100" style="width: 100%;">
+								value="#{movimentacoesMercadoriaBean.searchProduto.searchObject.descricao}" maxlength="100" style="width: 100%;">
 								<pxt:upperCase />
 							</h:inputText>
 						</pxt:panelGrid>
 					</ui:define>
 					
 					<ui:define name="colunas">
-						<pxtfl:column headerValue="Código" value="#{obj.codigoProduto}"
+						<pxtfl:column headerValue="Código" value="#{obj.codigo}"
 							columnWidth="10%" />
-						<pxtfl:column headerValue="Descrição" value="#{obj.descricaoProduto}"
+						<pxtfl:column headerValue="Descrição" value="#{obj.descricao}"
 							columnWidth="80%" />
 					</ui:define>
 				</pxtfl:searchField>
@@ -52,18 +52,17 @@
 					<f:selectItems value="#{movimentacoesMercadoriaBean.tipoOperacoes}" var="obj" itemLabel="#{obj}"/>
 				</h:selectOneMenu>
 				
-				<h:inputText value="#{movimentacoesMercadoriaBean.domain.quantidadeMovimentacao}" maxlength="10" style="width:100%" disabled="#{movimentacoesMercadoriaBean.disabledOnDefault}" >
+				<h:inputText value="#{movimentacoesMercadoriaBean.domain.quantidade}" maxlength="10" style="width:100%" disabled="#{movimentacoesMercadoriaBean.disabledOnDefault}" >
 					<pxt:onlyNumber />
 				</h:inputText>
 			</pxt:panelGrid>
 		</ui:define>
 		
 		<ui:define name="colunasTabela">	
-			<pxtfl:column headerValue="Cod. Movimentacao" value="#{obj.codigoMovimentacao}" />
-			<pxtfl:column headerValue="Data" value="#{obj.dataMovimentacao}" typeFormat="date" patternFormat="dd/MM/yyyy HH:mm:ss" maxWidth="110px"/>
-			<pxtfl:column headerValue="Produto" value="#{obj.produto.descricaoProduto}" />
+			<pxtfl:column headerValue="Cod. Movimentacao" value="#{obj.codigo}" />
+			<pxtfl:column headerValue="Data" value="#{obj.data}" typeFormat="date" patternFormat="dd/MM/yyyy HH:mm:ss" maxWidth="110px"/>
+			<pxtfl:column headerValue="Produto" value="#{obj.produto.descricao}" />
 			<pxtfl:column headerValue="Tipo Operação" value="#{obj.tipoOperacao}" />
-			<pxtfl:column headerValue="Qtd. Movimentada" value="#{obj.quantidadeMovimentacao}" />
 		</ui:define>		
 	</ui:composition>
 </html>
