Ajustado validações e inserção de ícone de carrinho na tela de Pedido

--- a/view/src/main/webapp/cadastro/cliente.xhtml
+++ b/view/src/main/webapp/cadastro/cliente.xhtml
@@ -9,6 +9,7 @@
 		<ui:param name="form_id" value="formCliente" />
 		<ui:param name="backingBean" value="#{clienteBean}" />
 		<ui:param name="titulo" value="Cliente" />
+		<ui:param name="renderedDelete" value="false" />
 	
 		<ui:define name="panelCadastro">			
 			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="10%;50%;15%;15%;10%" width="100%">
