--- a/view/src/main/webapp/cadastro/fornecedor.xhtml
+++ b/view/src/main/webapp/cadastro/fornecedor.xhtml
@@ -9,6 +9,7 @@
 		<ui:param name="form_id" value="formFornecedor" />
 		<ui:param name="backingBean" value="#{fornecedorBean}" />
 		<ui:param name="titulo" value="Fornecedor" />
+		<ui:param name="renderedDelete" value="false" />
 	
 		<ui:define name="panelCadastro">
 			
