--- a/view/src/main/webapp/cadastro/marca.xhtml
+++ b/view/src/main/webapp/cadastro/marca.xhtml
@@ -9,6 +9,7 @@
 		<ui:param name="form_id" value="formMarca" />
 		<ui:param name="backingBean" value="#{marcaBean}" />
 		<ui:param name="titulo" value="Marca" />
+		<ui:param name="renderedDelete" value="false" />
 	
 		<ui:define name="panelCadastro">			
 			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="20%;70%;10%" width="60%">
