--- a/view/src/main/webapp/operacoes/pedidoMercadoria.xhtml
+++ b/view/src/main/webapp/operacoes/pedidoMercadoria.xhtml
@@ -14,10 +14,11 @@
 		<ui:define name="btnFind" />
 	
 		<ui:define name="panelCadastro">
-			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="20%;25%;6%;10%;2%;14%;20%" width="100%">
+			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="20%;25%;6%;10%;2%;15%;2%;15%" width="100%">
 				<h:outputLabel value="Cliente:" styleClass="outputText" />
 				<h:outputLabel value="Produto:" styleClass="outputText" />
 				<h:outputLabel value="Quantidade:" styleClass="outputText" />
+				<h:outputLabel value="" styleClass="outputText" />
 				<h:outputLabel value="" styleClass="outputText" />
 				<h:outputLabel value="" styleClass="outputText" />
 				<h:outputLabel value="" styleClass="outputText" />
@@ -83,9 +84,11 @@
 					<a4j:ajax execute="@form" listener="#{pedidoMercadoriaBean.atualizaCarrinhoVazio}" render="@form" />
 				</a4j:commandLink>
 				
-				<h:graphicImage title="Carrinho" name="#{pedidoMercadoriaBean.carrinhoImagem}" library="img" style="border-width: 0px;" />
-				<h:outputText value="Itens no Carrinho: #{pedidoMercadoriaBean.quantidadeItensCarrinho}"/>
-				<h:outputText value="Total Pedido: R$ #{pedidoMercadoriaBean.totalPedidoFormatado}" style="font-weight:bold; font-style:italic; font-size:17px; padding:3px;"/>
+				<h:graphicImage title="Carrinho" name="#{pedidoMercadoriaBean.carrinhoImagem}" library="img" style="margin-top: -8px" />
+				<h:outputText value="Itens no Carrinho: #{pedidoMercadoriaBean.quantidadeItensCarrinho}" style="color: #35537E;font-size: 11px;font-family: Arial, Verdana, sans-serif;font-weight: bold;"/>
+				
+				<h:graphicImage title="Bolsa de Compras" url="/resources/img/bolsa-de-compras.png" style="margin-top: -8px"/>
+				<h:outputText id="totalPedido" value="Total Pedido: R$ #{pedidoMercadoriaBean.totalPedidoFormatado}" style="color: #35537E;font-size: 11px;font-family: Arial, Verdana, sans-serif;font-weight: bold;"/>
 				
 
 			</pxt:panelGrid>
@@ -105,7 +108,7 @@
 									<h:outputText value="Quantidade" />
 								</f:facet>
 								<pxtfl:column id="clnQuantidade" value="#{itemPedido.quantidade}" textAlign="center" style="width: 5%" rendered="#{!pedidoMercadoriaBean.editarCampoQuantidade}"/>
-									<h:inputText id="inpQuantidade" value="#{itemPedido.quantidade}"  textAlign="center" style="width: 185px%;" rendered="#{pedidoMercadoriaBean.editarCampoQuantidade}" maxlength="9">
+									<h:inputText id="inpQuantidade" value="#{itemPedido.quantidade}"   style="width: 185px%;textAlign: center" rendered="#{pedidoMercadoriaBean.editarCampoQuantidade}" maxlength="9">
 										<pxt:onlyNumber/>
 									</h:inputText>
 							</rich:column>
